--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -126,10 +126,12 @@ body::-webkit-scrollbar-thumb {
     vertical-align: top;
     width: 40px;
     cursor: pointer;
+    
+
 }
 
 .cont-menu {
-    z-index: 99;
+    z-index: 50;
     background: rgba(255, 255, 255, 0.575);
     backdrop-filter: blur(14.5px);
     box-shadow: -395px 0px 66px rgba(103, 103, 103, 0.25);
@@ -224,57 +226,115 @@ body::-webkit-scrollbar-thumb {
 .redes__menu a img:hover{
     transform: scale(1.5)
 }
+//########### Barran de navegacion A ###########//
 
+.cont-menua {
+    z-index: 20;
+    background: #f2f9ffda;
+    backdrop-filter: blur(14.5px);
+    box-shadow: -395px 0px 66px rgba(103, 103, 103, 0.25);
+    width: 100vw;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    transition: all .5s ease-in-out;
+    border-left: 1px solid #19232D;
+    .cont__logo__menu {
+        display: flex;
+        justify-content: start;
+        width: 100%;
+        .logo__menu {
+            align-items: end;
+            padding-left: 5em;
+            padding-top: 2em;
+            padding-bottom: 10px;
+            transform: scale(0.8);
+        }
+    
+    }
+    ul {
+        display: flex;
+        flex-direction: row;
+        padding: 5em 5em 20px 3em;
+        list-style: none;
+        border-bottom: 1px solid #19232D;
+        p {
+            justify-content: start;
+            align-items: start;
+            color: rgb(124, 124, 124);
+            display: block;
+            font-size: 60px;
+            text-decoration: none;
+            padding: 10px 6em;
+            font-family: 'Sora';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 136%;
+            }
+            a {
+                justify-content: end;
+                align-items: end;
+                color: rgb(3, 3, 3);
+                display: block;
+                text-decoration: none;
+                padding: 10px  5em;
+                cursor: pointer;
+                font-family: 'Sora';
+                font-style: normal;
+                font-weight: 200;
+                font-size: 20px;
+                line-height: 136%;
+                color: #020202;
+                &:hover {
+                    color: rgb(0, 0, 0);
+                    font-size: 20px;
+                    font-weight: 500;
+                }
+        }
+    
+    }
+    p {
+        justify-content: start;
+        align-items: start;
+        color: rgb(124, 124, 124);
+        display: block;
+        font-size: 60px;
+        text-decoration: none;
+        padding: 10px 9em;
+        font-family: 'Sora';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 136%;
+    }
+    .redes__menu{
+        margin-top: 1em;
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        padding: 10px 9em;
+        filter: invert(100%);
+        & img:hover{
+            transform: scale(1.5)
+        }
+    }
+}
 
-//########### barra de navegacion ###########//
-// nav {
-//     display: flex;
+.icono-menu img {
+    vertical-align: top;
+    width: 40px;
+    cursor: pointer;
+}
 
-//     align-items: center;
-//     margin-top: 2em;
-//     margin-bottom: 2em;
-//     justify-content: space-between;
-//     margin-left: 5em;
-//     margin-right: 5em;
-
-//     #logo {
-//         transform: scale(0.9);
-//     }
-
-//     .bars__menu {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: center;
-//         margin-top: 5px;
-//         width: 40px;
-//         transform: translate(-50%, -50%) scale(1);
-//         cursor: pointer;
-//         z-index: 100;
-//     }
-
-// }
-// .bars__menu span {
-//     display: block;
-//     width: 100%;
-//     height: 3px;
-//     background: #000000;
-//     margin-top: 6px;
-//     transform-origin: 0px 100%;
-//     transition: all 300ms;
-
-// }
-// .activeline1__bars-menu {
-//     transform: rotate(45deg) translate(-6px, 1px);
-
-// }
-// .activeline2__bars-menu {
-//     opacity: 0;
-//     margin-left: -30px;
-// }
-// .activeline3__bars-menu {
-//     transform: rotate(-45deg) translate(-6px, 2px);
-// }
+.active {
+    border-radius: 1000px 0px 0px 1000px;
+    transform: translate(100vw);
+    visibility: hidden;
+    position: fixed;
+    background: #ffffff;
+}
 
 //########### boton de contactar ###########//
 .float__wapp {
