--- a/style/sass.css
+++ b/style/sass.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: url("../assets/img/cursor.svg") 12 12, auto;
 }
 
 a {
@@ -13,7 +14,6 @@ a {
 
 body {
   background: #ffffff;
-  cursor: url("../assets/img/cursor.svg") 12 12, auto;
 }
 
 body::-webkit-scrollbar {
@@ -327,10 +327,13 @@ body::-webkit-scrollbar-thumb {
   z-index: 1;
 }
 .float__wapp .botonfloat__wapp {
-  margin-top: 12px;
-  margin-left: 12px;
+  margin-top: 11px;
+  margin-left: 11px;
   position: absolute;
   z-index: 1;
+}
+.float__wapp .botonfloat__wapp:hover {
+  transform: scale(1.1);
 }
 .float__wapp .backfloat__wapp {
   position: absolute;
@@ -591,6 +594,105 @@ p {
   justify-content: flex-end;
   align-items: flex-start;
 }
+.body__home dialog {
+  position: fixed;
+  top: 20%;
+  left: 25%;
+  border: 1px solid #263238;
+}
+.body__home dialog .popup_cv {
+  display: flex;
+  flex-direction: row;
+  padding: 42px 45px;
+  gap: 40px;
+  background: #FFF;
+}
+.body__home dialog .popup_cv .conten_uno_popup {
+  display: flex;
+  flex-direction: column;
+  gap: 37px;
+}
+.body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv {
+  display: flex;
+  flex-direction: column;
+  width: 286px;
+  height: 100%;
+  gap: 0.5em;
+}
+.body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv h2 {
+  color: #263238;
+  font-family: Sora;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 107.5%;
+  letter-spacing: 0.35px;
+}
+.body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv p {
+  color: #263238;
+  font-family: Sora;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 107.5%;
+  letter-spacing: 0.13px;
+}
+.body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 15px;
+}
+.body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv input {
+  display: flex;
+  padding: 12px;
+  align-items: center;
+  gap: 10px;
+  color: #263238;
+  font-family: Sora;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 107.5%;
+  letter-spacing: 0.15px;
+}
+.body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv .botoncv {
+  top: 0px;
+  right: 0px;
+  position: relative;
+  color: #FFF;
+  font-family: Sora;
+  width: 100%;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 107.5%;
+  padding: 10px 0em;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #19232D;
+  background: #00C187;
+  box-shadow: 2px 2px 0px 0px #000;
+  cursor: url("../assets/img/flecha1.svg") 12 12, auto;
+}
+.body__home dialog .popup_cv .conten_dos_popup {
+  border-bottom: 1px solid #263238;
+}
+.body__home dialog button {
+  z-index: 9;
+  border: 0px solid #263238;
+  background: #FFFFFF;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.39);
+  -webkit-backdrop-filter: blur(9.5px);
+          backdrop-filter: blur(9.5px);
+}
 
 .header__home_a {
   position: fixed;
@@ -686,6 +788,7 @@ p {
   gap: 30px;
 }
 .contenedor__seccion__inicio .cont__sect__inicio div div .boton {
+  position: relative;
   color: #FFF;
   font-family: Sora;
   font-size: 15px;
@@ -700,9 +803,28 @@ p {
   gap: 10px;
   border: 1px solid #19232D;
   background: #00C187;
-  box-shadow: 2px 2px 0px 0px #000;
+  cursor: url("../assets/img/flecha1.svg") 12 12, auto;
 }
-.contenedor__seccion__inicio .cont__sect__inicio div div .boton__cv {
+.contenedor__seccion__inicio .cont__sect__inicio div div .boton::before {
+  content: "";
+  position: absolute;
+  background: #161616;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transform: translateX(3px) translatey(3px);
+}
+.contenedor__seccion__inicio .cont__sect__inicio div div .boton:active {
+  transform: translateX(3px) translatey(3px);
+}
+.contenedor__seccion__inicio .cont__sect__inicio div div .boton:active::before {
+  transform: translateX(0px) translatey(0px);
+  background: #1a9c75;
+}
+.contenedor__seccion__inicio .cont__sect__inicio div div .botoncv {
+  position: relative;
   color: #FFF;
   font-family: Sora;
   font-size: 15px;
@@ -717,7 +839,25 @@ p {
   gap: 10px;
   border: 1px solid #19232D;
   background: #FF725E;
-  box-shadow: 2px 2px 0px 0px #000;
+  cursor: url("../assets/img/flecha1.svg") 12 12, auto;
+}
+.contenedor__seccion__inicio .cont__sect__inicio div div .botoncv::before {
+  content: "";
+  position: absolute;
+  background: #161616;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  transform: translateX(3px) translatey(3px);
+}
+.contenedor__seccion__inicio .cont__sect__inicio div div .botoncv:active {
+  transform: translateX(3px) translatey(3px);
+}
+.contenedor__seccion__inicio .cont__sect__inicio div div .botoncv:active::before {
+  transform: translateX(0px) translatey(0px);
+  background: #da432f;
 }
 .contenedor__seccion__inicio .cont__sect__inicio .cont__contadores__inicio {
   display: grid;
@@ -920,6 +1060,99 @@ p {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
+  }
+  .body__home dialog {
+    position: fixed;
+    top: 10vh;
+    left: 10vw;
+    border: 1px solid #263238;
+  }
+  .body__home dialog .popup_cv {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 42px 45px;
+    gap: 40px;
+    background: #FFF;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup {
+    display: flex;
+    flex-direction: column;
+    gap: 37px;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv {
+    display: flex;
+    flex-direction: column;
+    width: 286px;
+    height: 100%;
+    gap: 0.5em;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv h2 {
+    color: #263238;
+    font-family: Sora;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 107.5%;
+    letter-spacing: 0.35px;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv p {
+    color: #263238;
+    font-family: Sora;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 107.5%;
+    letter-spacing: 0.13px;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv input {
+    display: flex;
+    padding: 12px;
+    align-items: center;
+    gap: 10px;
+    color: #263238;
+    font-family: Sora;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 107.5%;
+    letter-spacing: 0.15px;
+  }
+  .body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv .botoncv {
+    top: 0px;
+    right: 0px;
+    position: relative;
+    color: #FFF;
+    font-family: Sora;
+    width: 100%;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 107.5%;
+    padding: 10px 0em;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid #19232D;
+    background: #00C187;
+    box-shadow: 2px 2px 0px 0px #000;
+    cursor: url("../assets/img/flecha1.svg") 12 12, auto;
+  }
+  .body__home dialog .popup_cv .conten_dos_popup {
+    border-bottom: 1px solid #263238;
+  }
+  .body__home dialog button {
+    z-index: 9;
+    border: 0px solid #263238;
+    background: #FFFFFF;
+    position: absolute;
+    right: 10px;
+    top: 10px;
   }
   .header__home_a {
     position: fixed;
